Grouped scripts under js folder.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Design Patterns</title>
 </head>
 <body>
-  <script src="facade.js"></script>
-  <script src="flyweight.js"></script>
-  <script src="sigleton.js"></script>
+  <script src="js/facade.js"></script>
+  <!-- <script src="js/flyweight.js"></script> -->
+  <!-- <script src="js/singleton.js"></script> -->
 </body>
 </html>
