--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Design Patterns</title>
 </head>
 <body>
-  <script src="js/facade.js"></script>
+  <!-- <script src="js/facade.js"></script> -->
   <!-- <script src="js/flyweight.js"></script> -->
   <!-- <script src="js/singleton.js"></script> -->
+  <script src="js/proxy.js"></script>
 </body>
 </html>
