Added factory.js file.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <title>Design Patterns</title>
 </head>
 <body>
+  <!-- <script src="js/decorator.js"></script> -->
   <!-- <script src="js/facade.js"></script> -->
+  <script src="js/factory.js"></script>
   <!-- <script src="js/flyweight.js"></script> -->
   <!-- <script src="js/singleton.js"></script> -->
-  <script src="js/proxy.js"></script>
+  <!-- <script src="js/proxy.js"></script> -->
 </body>
 </html>
