Wrapped every example in an IIFE. Used ES6 syntax across the board.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <!-- <script src="js/decorator.js"></script> -->
   <!-- <script src="js/facade.js"></script> -->
-  <script src="js/factory.js"></script>
+  <!-- <script src="js/factory.js"></script> -->
   <!-- <script src="js/flyweight.js"></script> -->
+  <!-- <script src="js/module.js"></script> -->
   <!-- <script src="js/singleton.js"></script> -->
-  <!-- <script src="js/proxy.js"></script> -->
 </body>
 </html>
