Update singleton.js file.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <!-- <script src="js/factory.js"></script> -->
   <!-- <script src="js/flyweight.js"></script> -->
   <!-- <script src="js/module.js"></script> -->
-  <!-- <script src="js/singleton.js"></script> -->
+  <script src="js/singleton.js"></script>
 </body>
 </html>
